fix: navigation scrollbar stability

--- a/polaris-react/src/components/Navigation/Navigation.scss
+++ b/polaris-react/src/components/Navigation/Navigation.scss
@@ -131,7 +131,12 @@ $nav-max-width: 360px;
     --p-color-nav-bg-surface-hover
   );
   width: 100%;
-  padding: 0 var(--p-space-300);
+  padding-block: 0;
+  padding-inline: var(--p-space-300);
+
+  @supports (scrollbar-gutter: stable) {
+    padding-right: 0;
+  }
 }
 
 .ItemInnerWrapper {
@@ -790,7 +795,11 @@ $nav-max-width: 360px;
   align-items: center;
   min-height: nav(desktop-nav-height);
   padding-left: var(--p-space-500);
-  padding-right: var(--p-space-100);
+  padding-right: var(--p-space-150);
+
+  @supports (scrollbar-gutter: stable) {
+    padding-right: 0;
+  }
 
   > :first-child {
     flex: 1 1 auto;
@@ -814,9 +823,13 @@ $nav-max-width: 360px;
     display: flex;
     align-items: center;
     height: calc(100% - var(--p-space-100));
-    margin-right: calc(var(--p-space-200) + var(--p-space-050));
-    padding: calc(var(--p-space-100) - var(--p-space-050));
+    margin-right: var(--p-space-200);
+    padding: var(--p-space-050);
     border-radius: var(--p-border-radius-200);
+
+    @supports (scrollbar-gutter: stable) {
+      margin-right: var(--p-space-050);
+    }
 
     // stylelint-disable-next-line selector-max-specificity -- set focus styles
     &:focus-visible:not(:active) {
